# mem-monitor

./: LICENSE  README.md  pyproject.toml
src/mem_monitor/: __init__.py  config.py  monitor.py
